# logrero

./: README.md
agent/: .gitignore  Cargo.toml  README.md  config.toml
agent/src/: agent.rs  config.rs  main.rs  server.rs
server/: go.mod  main.go
