[package]
name = "logrero"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.5"
systemd = "0.10.0"
